[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tno.mpc.encryption_schemes.paillier"
description = "Implementation of the Paillier cryptosystem"
readme = "README.md"
authors = [{ name = "TNO PET Lab", email = "petlab@tno.nl" }]
maintainers = [{ name = "TNO PET Lab", email = "petlab@tno.nl" }]
keywords = [
    "TNO",
    "MPC",
    "multi-party computation",
    "encryption schemes",
    "paillier",
    "cryptosystem",
]
license = { text = "Apache License, Version 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
    "Topic :: Security :: Cryptography",
]
urls = { Homepage = "https://pet.tno.nl/", Documentation = "https://docs.pet.tno.nl/mpc/encryption_schemes/paillier/3.1.2", Source = "https://github.com/TNO-MPC/encryption_schemes.paillier" }
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "tno.mpc.encryption_schemes.templates~=4.1",
    "tno.mpc.encryption_schemes.utils~=0.9",
]

[project.optional-dependencies]
gmpy = [
    "tno.mpc.encryption_schemes.utils[gmpy]~=0.9",
]
communication = [
    "tno.mpc.communication~=4.8",
]
tests = [
    "tno.mpc.encryption_schemes.paillier[communication]",
    "pytest>=8.1",
    "pytest-asyncio",
]

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = {attr = "tno.mpc.encryption_schemes.paillier.__version__"}

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.coverage.run]
branch = true
omit = ["*/test/*"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.isort]
profile = "black"
known_tno = "tno"
known_first_party = "tno.mpc.encryption_schemes.paillier"
sections = "FUTURE,STDLIB,THIRDPARTY,TNO,FIRSTPARTY,LOCALFOLDER"
no_lines_before = "LOCALFOLDER"

[tool.mypy]
mypy_path = "src,stubs"
strict = true
show_error_context = true
namespace_packages = true
explicit_package_bases = true

[tool.tbump.version]
current = "3.1.2"
regex = '''
\d+\.\d+\.\d+(-(.*))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

    [[tool.tbump.file]]
    src = "pyproject.toml"
    search = "current = \"{current_version}\""

    [[tool.tbump.file]]
    src = "src/tno/mpc/encryption_schemes/paillier/__init__.py"
    search = "__version__ = \"{current_version}\""

    [[tool.tbump.file]]
    src = "CITATION.cff"
    search = "version: {current_version}"

    [[tool.tbump.file]]
    src = "README.md"
    search = '\[here\]\(https:\/\/docs.pet.tno.nl/[^\.]*\/{current_version}'
