[metadata]
name = tno.mpc.encryption_schemes.paillier
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = Implementation of the Paillier cryptosystem
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
   Topic :: Security :: Cryptography
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    encryption schemes
    paillier
    cryptosystem
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.encryption_schemes.paillier/#files
project_urls =
    Documentation = https://docs.mpc.tno.nl/encryption_schemes/paillier/1.1.2
    Source Code = https://github.com/TNO-MPC/encryption_schemes.paillier
version = attr: tno.mpc.encryption_schemes.paillier.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.mpc.encryption_schemes.paillier
    tno.mpc.encryption_schemes.paillier.test
zip_safe = False
install_requires =
    typing_extensions
    tno.mpc.encryption_schemes.templates>=2.0.1
    tno.mpc.encryption_schemes.utils>=0.4.0
namespace_packages =
    tno
    tno.mpc
    tno.mpc.encryption_schemes
include_package_data = True

[options.package_data]
tno.mpc.encryption_schemes.paillier = py.typed

[options.extras_require]
gmpy =
    tno.mpc.encryption_schemes.utils[gmpy]
communication =
    tno.mpc.communication>=2.0.0
tests =
    pytest
    pytest-asyncio
    tno.mpc.communication>=2.1.0
